--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "graphql": "^16.12.0",
     "jose": "^6.1.3",
     "pg": "^8.16.3",
+    "pg-boss": "^12.8.0",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
